# On-Premise-LLM-Service-and-Quantization-Benchmark

./: .gitignore  CV_BULLETS_On-Premise-LLM-Serving-and-Quantization-Benchmark.md  Makefile  README.md  pyproject.toml
.github/workflows/: smoke-test.yml
configs/: loadtest.yaml  model.yaml  quant_awq.yaml  quant_gguf.yaml  quant_gptq.yaml
docker/: Dockerfile.llamacpp  Dockerfile.vllm
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  RESULTS.md  RUNBOOK.md
eval/: task_prompts.jsonl
scripts/: 01_download_base_model.py  02_quantize_gptq.py  03_quantize_awq.py  04_quantize_gguf.sh  05_serve_vllm.sh  06_serve_llamacpp.sh  07_loadtest.py  08_eval_quality.py  09_aggregate_results.py  run_benchmarks.py
